bk_ida/gccida/c3/move_by_pieces
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1855:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1860:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1864:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1865:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1874:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:1902:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // [rsp+4Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/expr.c:2065:10: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
genfun = insn_data_0[insn_code].genfun; 
         ^~~~~~~~~~~
         insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_by_pieces/src/obj/expr.o] Error 1
